Fix some content layout issues on mobile
Make it so that the page looks nice and responsive based on screen size.

--- a/public/static/gallery.css
+++ b/public/static/gallery.css
@@ -1,5 +1,11 @@
+/* Global styles */
 .header-nav ul {
   align-items: first baseline !important;
+}
+
+html {
+  /* No horizontal scroll bars */
+  overflow-x: hidden;
 }
 
 /* Gallery grid styles */
@@ -98,7 +104,7 @@
   line-height: 1.6;
 }
 
-.float-date {
+.gallery-date-single {
   padding-left: 1.4rem;
 }
 
@@ -163,6 +169,19 @@
 .thumbnail img {
   width: 100%;
   height: auto;
+}
+
+@media (max-width:768px) { 
+  /* Fix date and tags css on small screens */
+  .gallery-tags-single {
+    padding-left: 1.4rem;
+  }
+  .gallery-info-spacing {
+    display: none;
+  }
+  a.kofi-button {
+    min-width: 200px !important;
+  }
 }
 
 /* new mansory css   */
